@@ -1,3 +1,7 @@
+2019-07-28  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.
+
 2018-09-17  Ulrich Müller  <ulm@gentoo.org>
 
 	* Version 1.46 released.
